PortfolioMenu: fix 1px gap on webkit browsers

--- a/src/portfolio/components/PortfolioMenu.module.scss
+++ b/src/portfolio/components/PortfolioMenu.module.scss
@@ -4,6 +4,7 @@
   background: #020202;
   z-index: 100;
   padding: 3vh 0;
+  margin-top: -3px;
 
   a {
     display: block;
